--- a/solutions/6.md
+++ b/solutions/6.md
@@ -1,4 +1,4 @@
-command : ssh fsd319 tail -1 american-english-small
+command : ssh fsd319 tail -1 american-english-small | grep -oE '[^ ]+$'
 result : éclairs
 
 Last word in american-english-small
