--- a/solutions/7.md
+++ b/solutions/7.md
@@ -1,4 +1,4 @@
-command : ssh fsd319 find ./MLclass/* -maxdepth 0 -type d | wc -l
+command : ssh fsd319 ls MLclass -l | grep -c ^d
 result : 17
 
 Count the number of directories in MLclass/
